# emblib

./: .gitignore  .gitmodules  CMakeLists.txt  CodeStyle.md  LICENSE.md  README.md  platformio.ini
driverlib/i2c/: stm32f4_hal_i2c_master.hpp
driverlib/uart/: stm32f4_hal_usart.cpp  stm32f4_hal_usart.hpp
include/: emblib.hpp  emblib_config.hpp  emblib_config_template.hpp
include/common/: status.hpp  time.hpp
include/driverlib/gpio/: stm32f4_hal_gpio.hpp
include/driverlib/i2c/: stm32f4_hal_i2c_master.cpp  stm32f4_hal_i2c_master.hpp
include/driverlib/uart/: stm32f4_hal_usart.hpp
include/drivers/: gpio.hpp  i2c_address.hpp  i2c_device.hpp  i2c_master.hpp  serial_device.hpp  uart.hpp
include/emblib/: emblib.hpp
include/emblib/algo/: ekf.hpp  iir.hpp  kalman.hpp  pid.hpp
include/emblib/common/: char_dev.hpp  log.hpp  logger.hpp  status.hpp  stdio_dev.hpp  time.hpp
include/emblib/driver/: accelerometer.hpp  gpio_pin.hpp  gyroscope.hpp  i2c_dev.hpp  i2c_mux.hpp  motor.hpp  stdio_dev.hpp  uart.hpp
include/emblib/driver/actuator/: motor.hpp  servo.hpp
include/emblib/driver/gpio/: gpio_pin.hpp
include/emblib/driver/i2c/: i2c_bus.hpp  i2c_dev.hpp  i2c_master.hpp  i2c_mux.hpp
include/emblib/driver/io/: char_dev.hpp  stdio_dev.hpp  uart.hpp
include/emblib/driver/sensor/: accelerometer.hpp  gyroscope.hpp  three_axes_sensor.hpp  three_axis_sensor.hpp  utils.hpp
include/emblib/drivers/: accelerometer.hpp  char_dev.hpp  gpio.hpp  gyroscope.hpp  i2c_address.hpp  i2c_device.hpp  i2c_master.hpp  motor_driver.hpp  serial_device.hpp  uart.hpp
include/emblib/drivers/gpio/: gpio_pin.hpp
include/emblib/drivers/i2c/: i2c_dev.hpp  i2c_master.hpp  i2c_mux.hpp
include/emblib/drivers/sensor/: accelerometer.hpp  gyroscope.hpp
include/emblib/dsp/: iir.hpp  kalman.hpp  pid.hpp
include/emblib/math/: matrix.hpp  quaternion.hpp  vector.hpp
include/emblib/math/custom/: matrix.hpp  matrix_view.hpp
include/emblib/math/eigen/: matrix.hpp  matrix_base_plugin.hpp  matrix_inline.hpp  quaternion_plugin.hpp
include/emblib/rtos/: mutex.hpp  queue.hpp  task.hpp  thread.hpp
include/emblib/rtos/baremetal/: mutex_base.hpp  task.hpp
include/emblib/rtos/freertos/: mutex.hpp  mutex_base.hpp  queue.hpp  semaphore.hpp  task.hpp  task_base.hpp
include/emblib/rtos/freertos/details/: mutex_inline.hpp  queue_inline.hpp  task_inline.hpp
include/emblib/rtos/freertos/impl/: mutex_inline.hpp  queue_inline.hpp  task_inline.hpp
include/rtos/: mutex.hpp
include/rtos/baremetal/: mutex_base.hpp
src/: FreeRTOSConfig.h  emblib_config.hpp  main.cpp
src/common/: log.cpp  logger.cpp
src/drivers/: i2c_master.cpp  serial_device.cpp
src/rtos/freertos/: hooks.c  task.cpp
test/: CMakeLists.txt
test/algo/: ekf.test.cpp  iir.test.cpp  kalman.test.cpp  pid.test.cpp
test/common/: log.test.cpp
test/drivers/: accelerometer.test.cpp  gyroscope.test.cpp
test/dsp/: iir.test.cpp  kalman.test.cpp  pid.test.cpp
test/io/: stdio_dev.test.cpp
test/math/: matrix.test.cpp  quaternion.test.cpp  vector.test.cpp
test/math/custom/: matrix.test.cpp  matrix_view.test.cpp
test/rtos/: mutex.test.cpp  queue.test.cpp  task.test.cpp
test/rtos/freertos/: queue.test.cpp
