message(STATUS "Setting up tests")

enable_testing()

add_executable(tests
    math/matrix.test.cpp
    math/vector.test.cpp
    math/quaternion.test.cpp
    rtos/queue.test.cpp
    rtos/mutex.test.cpp
)

target_link_libraries(tests PRIVATE Catch2::Catch2WithMain emblib)

include(CTest)
include(Catch)
catch_discover_tests(tests)